--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
@@ -71,12 +71,12 @@
             "social_sharing_products": true,
             "social_sharing_style": "is-normal",
             "social_tumblr_link": "",
-            "social_twitter_link": "https://twitter.com/virtocommerce",
+            "social_twitter_link": "https://twitter.com/selectahead",
             "social_vimeo_link": "",
             "social_youtube_link": "",
             "twittercard_handle": "@",
             "type_accent_family": "Google_Dosis_600_sans",
-            "type_base_family": "'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif",
+            "type_base_family": "'Lato', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif",
             "type_base_size": "15px",
             "type_button_size": "17px",
             "type_button_transform": false,
