Continued working on Index page

--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
@@ -26,11 +26,18 @@
             "color_secondary": "#dcdcdc",
             "customer_layout": "theme",
             "favicon_enable": false,
-            "footer_content_enable": true,
+            "footer_content_enable": false,
             "footer_legallinks_enable": true,
-            "footer_newsletter_enable": true,
+            "footer_newsletter_enable": false,
             "footer_quicklinks_enable": true,
             "footer_quicklinks_linklist": "footer",
+            "footer_customerservice_enable": true,
+            "footer_customerservice_linklist": "customer service",
+            "footer_privacy_terms_enable": true,
+            "footer_privacy_terms_linklist": "privacy and terms",
+            "footer_customorder_enable": true,
+            "footer_customorder_linklist": "custom order",
+            "footer_customerorder_page": "custom-order",
             "footer_social_enable": true,
             "home_featured_collections_enable": true,
             "home_featured_collections_sort": "auto",
