Worked on carousel slides

--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
@@ -22,7 +22,7 @@
             "color_heading_text": "#000",
             "color_nav_bg": "#000",
             "color_nav_text": "#fff",
-            "color_primary": "#204a80",
+            "color_primary": "#E72327",
             "color_secondary": "#dcdcdc",
             "customer_layout": "theme",
             "favicon_enable": false,
@@ -39,6 +39,7 @@
             "footer_customorder_linklist": "custom order",
             "footer_customerorder_page": "custom-order",
             "footer_social_enable": true,
+             "header_linklist": "top header",
             "home_featured_collections_enable": true,
             "home_featured_collections_sort": "auto",
             "home_featured_row1": "frontpage",
@@ -60,25 +61,25 @@
             "share_pinterest": true,
             "share_twitter": true,
             "slide_1": true,
-            "slide_1_link": "/admin/themes/current/settings",
+            "slide_1_link": "/mayhem-festival",
             "slide_2": true,
-            "slide_2_link": "/admin/themes/current/settings",
+            "slide_2_link": "/football/hawks-012",
             "slide_3": true,
-            "slide_3_link": "/admin/themes/current/settings",
+            "slide_3_link":  "/rock-bands",
             "slider_home_auto": true,
             "slider_home_enable": true,
             "slider_home_rate": 7000,
             "social_facebook_link": "https://facebook.com/selectahead",
             "social_fancy_link": "",
-            "social_google_plus_link": "https://plus.google.com/+selectahead",
+            "social_google_plus_link": "",
             "social_instagram_link": "https://instagram.com/selectahead",
-            "social_pinterest_link": "",
+            "social_pinterest_link": "https://pinterest.com/selectahead",
             "social_sharing_blog": true,
             "social_sharing_count": true,
             "social_sharing_products": true,
             "social_sharing_style": "is-normal",
             "social_tumblr_link": "",
-            "social_twitter_link": "https://twitter.com/selectahead",
+            "social_twitter_link": "https://twitter.com/selectahead_usa",
             "social_vimeo_link": "",
             "social_youtube_link": "",
             "twittercard_handle": "@",
