Completed privacy policy, store policy, terms of sale and terms of use static pages.

--- a/STOREFRONT/Website/VirtoCommerce.Website.csproj
+++ b/STOREFRONT/Website/VirtoCommerce.Website.csproj
@@ -819,17 +819,17 @@
     <Content Include="App_Data\Themes\shop\Default\snippets\home-page-licensed-categories.liquid" />
     <Content Include="App_Data\Themes\shop\Default\snippets\top-header.liquid" />
     <Content Include="App_Data\Themes\shop\Default\snippets\home-slider.liquid" />
-    <Content Include="App_Data\Pages\shop\en-US\pages\about.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\contact-us.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\custom-order.md" />
-    <Content Include="App_Data\Pages\shop\en-US\pages\customer-order.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\privacy-policy.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\product-info.md" />
-    <Content Include="App_Data\Pages\shop\en-US\pages\returns.md" />
+    <Content Include="App_Data\Pages\shop\en-US\pages\returns-exchanges.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\store-policy.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\terms-of-sale.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\terms-of-use.md" />
     <Content Include="App_Data\Pages\shop\en-US\pages\testimonials.md" />
+    <Content Include="App_Data\Pages\shop\en-US\pages\about-us.md" />
+    <Content Include="App_Data\Pages\shop\en-US\pages\reviews.md" />
     <None Include="App_Data\Themes\_Global\templates\external_login_confirmation.liquid" />
     <Content Include="App_Data\Themes\_Global\templates\index.liquid" />
     <Content Include="App_Data\Themes\_Global\templates\banner.liquid" />
