--- a/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
+++ b/STOREFRONT/Website/App_Data/Themes/shop/Default/config/settings_data.json
@@ -25,7 +25,7 @@
             "color_primary": "#E72327",
             "color_secondary": "#dcdcdc",
             "customer_layout": "theme",
-            "favicon_enable": false,
+            "favicon_enable": true,
             "footer_content_enable": false,
             "footer_legallinks_enable": true,
             "footer_newsletter_enable": false,
@@ -50,9 +50,9 @@
             "home_content": "",
             "logo_max_width": "500",
             "logo_use_image": true,
-            "product_image_zoom_enable": false,
+            "product_image_zoom_enable": true,
             "product_quantity_enable": false,
-            "product_reviews_enable": false,
+            "product_reviews_enable": true,
             "product_vendor_enable": false,
             "related_products_enable": true,
             "share_facebook": true,
