--- a/STOREFRONT/Website/Web.config
+++ b/STOREFRONT/Website/Web.config
@@ -24,6 +24,10 @@
     <add key="OAuth2.Google.Secret" value="SECRET" />
     <add key="OAuth2.Facebook.AppId" value="SECRET" />
     <add key="OAuth2.Facebook.Secret" value="SECRET" />
+
+    <add key="SendGrid:Username"  value="azure_d087ada3749d9fd0acdb864e52fa253c@azure.com"/>
+    <add key="SendGrid:Password" value="jebjnfv6"/>
+    <add key="SendGrid:ToEmail" value="gerfen@evolutionsoftware.com"/>
   </appSettings>
   <connectionStrings configSource="app_data\configuration\connectionStrings.config" />
   <system.web>
