--- a/STOREFRONT/Website/packages.config
+++ b/STOREFRONT/Website/packages.config
@@ -20,6 +20,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Sendgrid" version="6.1.0" targetFramework="net45" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
