Added local nuget support.

--- a/PLATFORM/VirtoCommerce.Platform.Web/Web.config
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Web.config
@@ -39,6 +39,9 @@
         <add key="VirtoCommerce:Authentication:ApiKeys.Enabled" value="true" />
         <add key="VirtoCommerce:Authentication:ApiKeys.HttpHeaderName" value="api_key" />
         <add key="VirtoCommerce:Authentication:ApiKeys.QueryStringParameterName" value="api_key" />
+        <add key="SendGrid:Username"  value="azure_d087ada3749d9fd0acdb864e52fa253c@azure.com"/>
+        <add key="SendGrid:Password" value="jebjnfv6"/>
+        <add key="SendGrid:ToEmail" value="gerfen@hotmail.com"/>
     </appSettings>
     <system.web>
         <!--<authentication mode="Forms" />-->
