--- a/STOREFRONT/Website/Web.config
+++ b/STOREFRONT/Website/Web.config
@@ -25,9 +25,9 @@
     <add key="OAuth2.Facebook.AppId" value="SECRET" />
     <add key="OAuth2.Facebook.Secret" value="SECRET" />
 
-    <add key="SendGrid:Username"  value="azure_d087ada3749d9fd0acdb864e52fa253c@azure.com"/>
-    <add key="SendGrid:Password" value="jebjnfv6"/>
-    <add key="SendGrid:ToEmail" value="gerfen@evolutionsoftware.com"/>
+    <add key="SendGrid:Username"  value=""/>
+    <add key="SendGrid:Password" value=""/>
+    <add key="SendGrid:ToEmail" value=""/>
   </appSettings>
   <connectionStrings configSource="app_data\configuration\connectionStrings.config" />
   <system.web>
