Updated email config

--- a/STOREFRONT/Website/VirtoCommerce.Website.csproj
+++ b/STOREFRONT/Website/VirtoCommerce.Website.csproj
@@ -279,6 +279,10 @@
     <Content Include="App_Data\Themes\_Global\templates\payment.liquid" />
     <None Include="App_Data\Themes\_Global\templates\reset-password.liquid" />
     <Content Include="App_Data\Help\nostore.html" />
+    <Content Include="App_Data\x64\LibSass.x64.dll" />
+    <Content Include="App_Data\x64\libsassnet.dll" />
+    <Content Include="App_Data\x86\LibSass.x86.dll" />
+    <Content Include="App_Data\x86\libsassnet.dll" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="App_Data\configuration\connectionStrings.config" />
