--- a/STOREFRONT/Website/VirtoCommerce.Website.csproj
+++ b/STOREFRONT/Website/VirtoCommerce.Website.csproj
@@ -20,8 +20,6 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,7 +29,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -41,38 +38,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <Choose>
-    <When Condition="'$(SITE_BITNESS)' == 'x86'">
-      <PropertyGroup>
-        <PlatformTarget>x86</PlatformTarget>
-      </PropertyGroup>
-      <ItemGroup>
-        <Reference Include="LibSass.x86, Version=0.0.0.0, Culture=neutral">
-          <SpecificVersion>False</SpecificVersion>
-          <HintPath>..\Shared\Win86\LibSass.x86.dll</HintPath>
-        </Reference>
-        <Reference Include="libsassnet, Version=1.0.0.0, Culture=neutral">
-          <SpecificVersion>False</SpecificVersion>
-          <HintPath>..\Shared\Win86\libsassnet.dll</HintPath>
-        </Reference>
-      </ItemGroup>
-    </When>
-    <Otherwise>
-      <PropertyGroup>
-        <PlatformTarget>x64</PlatformTarget>
-      </PropertyGroup>
-      <ItemGroup>
-        <Reference Include="LibSass.x64, Version=0.0.0.0, Culture=neutral">
-          <SpecificVersion>False</SpecificVersion>
-          <HintPath>..\Shared\Win64\LibSass.x64.dll</HintPath>
-        </Reference>
-        <Reference Include="libsassnet, Version=1.0.0.0, Culture=neutral">
-          <SpecificVersion>False</SpecificVersion>
-          <HintPath>..\Shared\Win64\libsassnet.dll</HintPath>
-        </Reference>
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
   <ItemGroup>
     <Reference Include="DotLiquid, Version=1.0.0.0, Culture=neutral, PublicKeyToken=82e46016ecf9f07c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -119,14 +84,6 @@
     </Reference>
     <Reference Include="Owin">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
-    </Reference>
-    <Reference Include="SendGrid.SmtpApi, Version=1.3.1.0, Culture=neutral, PublicKeyToken=2ae73662c35d80e4, processorArchitecture=MSIL">
-      <HintPath>..\packages\SendGrid.SmtpApi.1.3.1\lib\net40\SendGrid.SmtpApi.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="SendGridMail, Version=6.1.0.0, Culture=neutral, PublicKeyToken=2ae73662c35d80e4, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sendgrid.6.1.0\lib\SendGridMail.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -205,7 +162,6 @@
     <Compile Include="Controllers\DownloadController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
-    <Compile Include="Controllers\MailController.cs" />
     <Compile Include="Controllers\StoreControllerBase.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
@@ -274,6 +230,7 @@
     <Content Include="App_Data\Themes\_Global\Snippets\checkout_totals.liquid" />
     <Content Include="App_Data\Themes\_Global\Snippets\guest_popup.liquid" />
     <Content Include="App_Data\Themes\_Global\Snippets\error_popup.liquid" />
+    <Content Include="App_Data\Themes\_Global\templates\bank_card_form.liquid" />
     <None Include="App_Data\Themes\_Global\templates\external_login_confirmation.liquid" />
     <Content Include="App_Data\Themes\_Global\templates\index.liquid" />
     <Content Include="App_Data\Themes\_Global\templates\banner.liquid" />
@@ -290,9 +247,7 @@
     <Content Include="App_Data\Themes\_Global\customer_area.js" />
     <Content Include="App_Data\Themes\_Global\option_selection.js" />
     <Content Include="App_Data\Themes\_Global\shopify_common.js" />
-    <Content Include="Web.config">
-      <SubType>Designer</SubType>
-    </Content>
+    <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -335,7 +290,6 @@
     <Content Include="App_Data\Themes\_Default\locales\fr.json" />
     <Content Include="App_Data\Themes\_Default\locales\pt-BR.json" />
     <Content Include="App_Data\Themes\_Default\locales\pt-PT.json" />
-    <Content Include="App_Data\Themes\_Default\snippets\advanced-tag-loop.liquid" />
     <Content Include="App_Data\Themes\_Default\snippets\ajax-cart-template.liquid" />
     <Content Include="App_Data\Themes\_Default\snippets\blog-sidebar.liquid" />
     <Content Include="App_Data\Themes\_Default\snippets\breadcrumb.liquid" />
@@ -438,7 +392,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Pages\" />
-    <Folder Include="Views\Mail\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -459,12 +412,12 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  <Target Name="DeleteLibSassFilesFromBin" AfterTargets="Build">
+    <ItemGroup>
+      <LibSassFiles Include="$(OutputPath)libsassnet.dll" />
+      <LibSassFiles Include="$(OutputPath)LibSass.x64.dll" />
+    </ItemGroup>
+    <Delete Files="@(LibSassFiles)" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
