--- a/STOREFRONT/VirtoCommerce.Storefront/Web.config
+++ b/STOREFRONT/VirtoCommerce.Storefront/Web.config
@@ -6,7 +6,7 @@
     </configSections>
 
     <connectionStrings>
-        <add name="VirtoCommerceBaseUrl" connectionString="http://localhost/admin" />
+        <add name="VirtoCommerceBaseUrl" connectionString="http://localhost:8081/admin" />
     </connectionStrings>
 
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" throwExceptions="true" autoReload="true">
