--- a/STOREFRONT/VirtoCommerce.Storefront/Web.config
+++ b/STOREFRONT/VirtoCommerce.Storefront/Web.config
@@ -6,7 +6,7 @@
     </configSections>
 
     <connectionStrings>
-        <add name="VirtoCommerceBaseUrl" connectionString="http://localhost:8081/admin" />
+        <add name="VirtoCommerceBaseUrl" connectionString="http://localhost/admin" />
     </connectionStrings>
 
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" throwExceptions="true" autoReload="true">
@@ -44,7 +44,7 @@
     </system.net>
 
     <appSettings>
-        <add key="DefaultStore" value="Electronics" />
+        <add key="DefaultStore" value="Babywise" />
         <add key="vs:EnableBrowserLink" value="false" />
         <add key="webpages:Version" value="3.0.0.0" />
         <add key="webpages:Enabled" value="false" />
