--- a/STOREFRONT/VirtoCommerce.Storefront/Web.config
+++ b/STOREFRONT/VirtoCommerce.Storefront/Web.config
@@ -3,7 +3,7 @@
     <configSections>
         <section name="cacheManager" type="CacheManager.Core.Configuration.CacheManagerSection, CacheManager.Core" />
         <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
-    </configSections>
+    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
 
     <connectionStrings>
         <add name="VirtoCommerceBaseUrl" connectionString="http://localhost/admin" />
@@ -85,7 +85,12 @@
                 </outputCacheProfiles>
             </outputCacheSettings>
         </caching>
-    </system.web>
+    <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
+            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
+        </httpModules><httpHandlers>
+            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
+        </httpHandlers></system.web>
     <system.webServer>
         <validation validateIntegratedModeConfiguration="false" />
         <modules runAllManagedModulesForAllRequests="true">
@@ -94,14 +99,16 @@
             <remove name="FormsAuthentication" />
             <remove name="UrlRoutingModule-4.0" />
             <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" />
-        </modules>
+        <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
 
         <security>
             <requestFiltering allowDoubleEscaping="true">
             </requestFiltering>
         </security>
     
-    </system.webServer>
+    <handlers>
+            <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+        </handlers></system.webServer>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
@@ -154,4 +161,9 @@
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
-</configuration>
+<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- 
+          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
+          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
+      -->
+    </glimpse></configuration>
